# drf-auth

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
drf_auth_project/: settings.py  urls.py
