[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["Yonatan Palagashvili <yonimotek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^4.4.1"
docker-compose = "^1.27.4"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"
gunicorn = "^20.0.4"
mccabe = "^0.6.1"
mypy-extensions = "^0.4.3"
pathspec = "^0.8.1"
pycodestyle = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
